--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,10 @@
 ja:
-  customer: 
-        status:
-          available: "利用可能"
-          suspended: "利用停止中"
+  enums:
+    report:
+      reason:
+        malicious_expression: 悪意のある表現
+        inappropriate_content: 不適切な表現
+        misinformation: 誤った情報
+        commercial_purposes: 商業目的
+        spam: スパム
+        other: その他
